# async-oneshot-channel

./: Cargo.toml  README.md
src/: lib.rs  notify.rs
