[package]
name = "async-oneshot-channel"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/AmitPr/async-oneshot-channel"
description = "A simple async oneshot channel implementation"
license = "MIT"

[dependencies]
atomic-waker = "1.1.2"

[dev-dependencies]
tokio = { version = "1.41.1", features = ["full"] }
futures = "0.3.31"
